--- a/Satellite Orbits (Montebruck)/Julia/SAT_Force.ipynb
+++ b/Satellite Orbits (Montebruck)/Julia/SAT_Force.ipynb
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
        "Density_HP (generic function with 1 method)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,8 +837,9 @@
     " \n",
     "  # height = Geodetic(r_tod).h/1000.0          #  [km]\n",
     "    (lon,lat,height)=Geodetic(r_tod,R_Earth,f_Earth)\n",
-    "    \n",
+    "\n",
     "  height=height/1000.\n",
+    "#  println(\"lon=\",lon,\",lat=\",lat,\",height=\",height)\n",
     "    \n",
     "  # Exit with zero density outside height model limits\n",
     "\n",
