--- a/Satellite Orbits (Montebruck)/Julia/SAT_RefSys.ipynb
+++ b/Satellite Orbits (Montebruck)/Julia/SAT_RefSys.ipynb
@@ -198,16 +198,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Geodetic (generic function with 1 method)"
+       "\"r=[100.,100.,100.]\\nR_Earth=6378.137e3\\nf_Earth=1.0/298.257223563\\n\\nGeodetic(r,R_Earth,f_Earth)  \\n\\n\""
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,6 @@
     "  \n",
     "  # Check validity of input data\n",
     "\n",
-    "  \n",
     "  if (norm(r)==0.0) \n",
     "    println(\" invalid input in Geodetic constructor\")\n",
     "    return nothing\n",
@@ -238,13 +237,13 @@
     "\n",
     "  # Iteration \n",
     "\n",
-    "\n",
     "  dZ = e2*Z\n",
-    "  dZ_new=0.\n",
+    "  dZ_new=-1.\n",
     "  ZdZ=Z\n",
     "  Nh=0.\n",
     "  N=0.\n",
-    "    \n",
+    " \n",
+    "\n",
     "  while abs(dZ-dZ_new) > epsRequ\n",
     "    ZdZ    =  Z + dZ\n",
     "    Nh     =  sqrt( rho2 + ZdZ*ZdZ ) \n",
@@ -662,32 +661,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "function IERS_TT_UTC(Mjd_TT)\n",
+    "\"\"\"\n",
+    "struct IERS{T}\n",
+    "    TT_TAI::T\n",
+    "    GSP_TAI::T\n",
+    "    TT_GPS::T\n",
+    "    TAI_GPS::T\n",
+    "    UT1_TAI_::T\n",
+    "    UTC_TAI_::T\n",
+    "    x_pole_::T\n",
+    "    y_pole_::T\n",
+    "end\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "IERS_UT1_UTC (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function IERS_TT_UTC(Mjd_UTC,UTC_TAI_)\n",
     "\"\"\"   \n",
     "double IERS::TT_UTC (double Mjd_UTC){return  TT_TAI-UTC_TAI(Mjd_UTC);};\n",
     "       double IERS::UTC_TAI(double Mjd_UTC){return UTC_TAI_;};    \n",
     "\"\"\"\n",
     "  TT_TAI  = +32.184 \n",
-    "  UTC_TAI_ = 0.0\n",
     "    \n",
-    "  return  TT_TAI-UTC_TAI_  \n",
+    "  return  TT_TAI-UTC_TAI_ \n",
     "\n",
     "end\n",
     "\n",
-    "function IERS_UT1_UTC(Mjd_TT)\n",
+    "function IERS_UT1_UTC(Mjd_UTC,UT1_TAI_,UTC_TAI_)\n",
     "\"\"\"\n",
     "  double IERS::UT1_UTC(double Mjd_UTC){return UT1_TAI(Mjd_UTC)-UTC_TAI(Mjd_UTC);};  \n",
     "         double IERS::UT1_TAI(double Mjd_UTC){return UT1_TAI_;}; \n",
     "         double IERS::UTC_TAI(double Mjd_UTC){return UTC_TAI_;};\n",
     "\"\"\"\n",
-    "  \n",
-    "   UT1_TAI_=0.0\n",
-    "   UTC_TAI_=0.0\n",
     "   \n",
     "   return(UT1_TAI_-UTC_TAI_)\n",
     "    \n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
